Compiler Bouw/compiler/test/basic/stephen/fail/short_circuit_bad.cvc
// Should produce a context analysis error due to a function being undefined.

int rv = 0;

export int main() {
    if (false && kaas()) {}
    return rv;
}
